Changed style to better show on iphone5c, fix "A zero sensor value is written to the database in case of IOException"

--- a/src/tcontrol/tcontrol-web/src/main/webapp/sensors.css
+++ b/src/tcontrol/tcontrol-web/src/main/webapp/sensors.css
@@ -11,7 +11,7 @@
 .sensor_item{
     display:none;
     float: left;
-    margin :0px 43px 70px 10px; 
+    margin :10px 12px 20px 12px; 
 }
 
 .sensor_items .sensor_item .sensor_item_body {
